--- a/src/pc.rc
+++ b/src/pc.rc
@@ -86,13 +86,13 @@ BEGIN
     LTEXT           "Memory :",IDC_STATIC,15,156,40,10
 END
 
-HdConfDlg DIALOGEX 0, 0, 210, 172
+HdConfDlg DIALOGEX 0, 0, 210, 312
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Configure Hard Discs"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,31+12,152,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,101+12,152,50,14
+    DEFPUSHBUTTON   "OK",IDOK,31+12,292,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,101+12,292,50,14
     
     LTEXT           "C:",IDC_STATIC,7,6,27,10
     EDITTEXT        IDC_EDIT_C_FN, 7, 22, 136, 12, WS_DISABLED
@@ -121,6 +121,34 @@ BEGIN
     LTEXT           "Heads:",IDC_STATIC,63,108,29,8
     LTEXT           "Cylinders:",IDC_STATIC,120,108,32,12
     LTEXT           "", IDC_TEXT_D_SIZE, 7, 124, 136, 12    
+
+    LTEXT           "E:",IDC_STATIC,7,146,27,10
+    EDITTEXT        IDC_EDIT_E_FN, 7, 162, 136, 12, WS_DISABLED
+    PUSHBUTTON      "...",IDC_EFILE,7 + 136,     162, 16, 14
+    PUSHBUTTON      "New",IDC_ENEW,7 + 136 + 16, 162, 24, 14
+    PUSHBUTTON      "Eject", IDC_EJECTE, 7 + 136 + 16 + 24, 162, 24, 14
+    
+    EDITTEXT        IDC_EDIT_E_SPT,36,178,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_E_HPC,94,178,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_E_CYL,152,178,28,12, WS_DISABLED
+    LTEXT           "Sectors:",IDC_STATIC,7,178,27,10
+    LTEXT           "Heads:",IDC_STATIC,63,178,29,8
+    LTEXT           "Cylinders:",IDC_STATIC,120,178,32,12
+    LTEXT           "", IDC_TEXT_E_SIZE, 7, 194, 136, 12    
+
+    LTEXT           "F:",IDC_STATIC,7,216,27,10
+    EDITTEXT        IDC_EDIT_F_FN, 7, 232, 136, 12, WS_DISABLED
+    PUSHBUTTON      "...",IDC_FFILE,7 + 136,     232, 16, 14
+    PUSHBUTTON      "New",IDC_FNEW,7 + 136 + 16, 232, 24, 14
+    PUSHBUTTON      "Eject", IDC_EJECTF, 7 + 136 + 16 + 24, 232, 24, 14
+    
+    EDITTEXT        IDC_EDIT_F_SPT,36,248,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_F_HPC,94,248,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_F_CYL,152,248,28,12, WS_DISABLED
+    LTEXT           "Sectors:",IDC_STATIC,7,248,27,10
+    LTEXT           "Heads:",IDC_STATIC,63,248,29,8
+    LTEXT           "Cylinders:",IDC_STATIC,120,248,32,12
+    LTEXT           "", IDC_TEXT_F_SIZE, 7, 264, 136, 12    
     
 END
 
