Initial 64-bit recompiler. Various 64-bit fixes. Various fixes to allow building under MinGW-w64.

--- a/src/pc.rc
+++ b/src/pc.rc
@@ -1,6 +1,10 @@
 #include <windows.h>
 #include "resources.h"
 
+#ifndef UPDOWN_CLASS
+#define UPDOWN_CLASS L"msctls_updown32"
+#endif
+
 MainMenu MENU DISCARDABLE
 BEGIN
         POPUP "&File"
