--- a/src/pc.rc
+++ b/src/pc.rc
@@ -55,39 +55,40 @@ BEGIN
         END
 END
 
-ConfigureDlg DIALOGEX 0, 0, 232+40, 272
+ConfigureDlg DIALOGEX 0, 0, 232+40, 292
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Configure PCem"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,64,248,50,14, WS_TABSTOP
-    PUSHBUTTON      "Cancel",IDCANCEL,128,248,50,14, WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,64,268,50,14, WS_TABSTOP
+    PUSHBUTTON      "Cancel",IDCANCEL,128,268,50,14, WS_TABSTOP
     COMBOBOX        IDC_COMBO1,62,16,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBOVID,62,36,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Configure", IDC_CONFIGUREVID, 224, 36, 40, 14, WS_TABSTOP
     COMBOBOX        IDC_COMBOCPUM,62,56,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBO3,62,76,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBOCHC,62,96,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBOSPD,62,116,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBOSND,62,136,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Configure", IDC_CONFIGURESND, 224, 136, 40, 14, WS_TABSTOP
-    EDITTEXT        IDC_MEMTEXT, 62, 152, 36, 14, ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "", IDC_MEMSPIN, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_NOTHOUSANDS | UDS_SETBUDDYINT, 98, 152, 12, 14
-    LTEXT           "MB", IDC_STATIC, 98, 152, 40, 10
-    CONTROL         "CMS / Game Blaster",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,172,118,10
-    CONTROL         "Gravis Ultrasound",IDC_CHECKGUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,188,118,10    
-    CONTROL         "Innovation SSI-2001",IDC_CHECKSSI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,204,118,10
-    CONTROL         "Composite CGA",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,220,118,10
-    CONTROL         "Voodoo Graphics",IDC_CHECKVOODOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,236,118,10
-    PUSHBUTTON      "Configure", IDC_CONFIGUREVOODOO, 224, 236, 40, 14, WS_TABSTOP
+    CONTROL         "Dynamic Recompiler",IDC_CHECKDYNAREC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,96,118,10
+    COMBOBOX        IDC_COMBOCHC,62,116,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBOSPD,62,136,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBOSND,62,156,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Configure", IDC_CONFIGURESND, 224, 156, 40, 14, WS_TABSTOP
+    EDITTEXT        IDC_MEMTEXT, 62, 172, 36, 14, ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "", IDC_MEMSPIN, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_NOTHOUSANDS | UDS_SETBUDDYINT, 98, 172, 12, 14
+    LTEXT           "MB", IDC_STATIC, 98, 172, 40, 10
+    CONTROL         "CMS / Game Blaster",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,192,118,10
+    CONTROL         "Gravis Ultrasound",IDC_CHECKGUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,208,118,10    
+    CONTROL         "Innovation SSI-2001",IDC_CHECKSSI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,224,118,10
+    CONTROL         "Composite CGA",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,240,118,10
+    CONTROL         "Voodoo Graphics",IDC_CHECKVOODOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,256,118,10
+    PUSHBUTTON      "Configure", IDC_CONFIGUREVOODOO, 224, 256, 40, 14, WS_TABSTOP
     LTEXT           "Machine :",IDC_STATIC,15,16,40,10
     LTEXT           "Video :",IDC_STATIC,15,36,34,10
     LTEXT           "CPU type :",IDC_STATIC,15,56,34,10
     LTEXT           "CPU :",IDC_STATIC,15,76,34,10
-    LTEXT           "Cache :",IDC_STATIC,15,96,40,10
-    LTEXT           "Video speed :",IDC_STATIC,15,116,40,10    
-    LTEXT           "Soundcard :",IDC_STATIC,15,136,40,10
-    LTEXT           "Memory :",IDC_STATIC,15,156,40,10
+    LTEXT           "Cache :",IDC_STATIC,15,116,40,10
+    LTEXT           "Video speed :",IDC_STATIC,15,136,40,10    
+    LTEXT           "Soundcard :",IDC_STATIC,15,156,40,10
+    LTEXT           "Memory :",IDC_STATIC,15,176,40,10
 END
 
 HdConfDlg DIALOGEX 0, 0, 210, 312
