--- a/src/pc.rc
+++ b/src/pc.rc
@@ -74,7 +74,7 @@ BEGIN
     PUSHBUTTON      "Configure", IDC_CONFIGURESND, 224, 156, 40, 14, WS_TABSTOP
     EDITTEXT        IDC_MEMTEXT, 62, 172, 36, 14, ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "", IDC_MEMSPIN, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_NOTHOUSANDS | UDS_SETBUDDYINT, 98, 172, 12, 14
-    LTEXT           "MB", IDC_STATIC, 98, 172, 40, 10
+    LTEXT           "MB", IDC_TEXT_MB, 98, 172, 40, 10
     CONTROL         "CMS / Game Blaster",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,232,118,10
     CONTROL         "Gravis Ultrasound",IDC_CHECKGUS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,248,118,10    
     CONTROL         "Innovation SSI-2001",IDC_CHECKSSI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,14,264,118,10
