--- a/src/pc.rc
+++ b/src/pc.rc
@@ -28,6 +28,7 @@ BEGIN
                 BEGIN
                         MENUITEM "&Disabled", IDM_CDROM_DISABLED
                         MENUITEM "&Empty",IDM_CDROM_EMPTY
+                        MENUITEM "&ISO...",IDM_CDROM_ISO
                 END
                 POPUP "&Video"
                 BEGIN
