CD-ROM IDE channel now configuarable. Based on patch from Battler.

--- a/src/pc.rc
+++ b/src/pc.rc
@@ -96,69 +96,77 @@ BEGIN
     COMBOBOX        IDC_COMBODRB,62,216,157,120,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
 END
 
-HdConfDlg DIALOGEX 0, 0, 210, 312
+HdConfDlg DIALOGEX 0, 0, 210, 312+4*16
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Configure Hard Discs"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,31+12,292,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,101+12,292,50,14
+    DEFPUSHBUTTON   "OK",IDOK,31+12,292+64,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,101+12,292+64,50,14
     
     LTEXT           "C:",IDC_STATIC,7,6,27,10
-    EDITTEXT        IDC_EDIT_C_FN, 7, 22, 136, 12, WS_DISABLED
-    PUSHBUTTON      "...",IDC_CFILE,7 + 136,      22, 16, 14
-    PUSHBUTTON      "New",IDC_CNEW,7 + 136 + 16, 22, 24, 14
-    PUSHBUTTON      "Eject", IDC_EJECTC, 7 + 136 + 16 + 24, 22, 24, 14
+    RADIOBUTTON     "Hard drive", IDC_CHDD,   7, 22, 53, 12 , WS_TABSTOP
+    RADIOBUTTON     "CD-ROM",     IDC_CCDROM, 7+64, 22, 53, 12 , WS_TABSTOP
+    EDITTEXT        IDC_EDIT_C_FN, 7, 22+16, 136, 12, WS_DISABLED
+    PUSHBUTTON      "...",IDC_CFILE,7 + 136,      22+16, 16, 14
+    PUSHBUTTON      "New",IDC_CNEW,7 + 136 + 16, 22+16, 24, 14
+    PUSHBUTTON      "Eject", IDC_EJECTC, 7 + 136 + 16 + 24, 22+16, 24, 14
         
-    EDITTEXT        IDC_EDIT_C_SPT,36,38,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT_C_HPC,94,38,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT_C_CYL,152,38,28,12, WS_DISABLED
-    LTEXT           "Sectors:",IDC_STATIC,7,38,27,10
-    LTEXT           "Heads:",IDC_STATIC,63,38,29,8
-    LTEXT           "Cylinders:",IDC_STATIC,120,38,32,12
-    LTEXT           "", IDC_TEXT_C_SIZE, 7, 54, 136, 12
+    EDITTEXT        IDC_EDIT_C_SPT,36,38+16,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_C_HPC,94,38+16,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_C_CYL,152,38+16,28,12, WS_DISABLED
+    LTEXT           "Sectors:",IDC_STATIC,7,38+16,27,10
+    LTEXT           "Heads:",IDC_STATIC,63,38+16,29,8
+    LTEXT           "Cylinders:",IDC_STATIC,120,38+16,32,12
+    LTEXT           "", IDC_TEXT_C_SIZE, 7, 54+16, 136, 12
     
-    LTEXT           "D:",IDC_STATIC,7,76,27,10
-    EDITTEXT        IDC_EDIT_D_FN, 7, 92, 136, 12, WS_DISABLED
-    PUSHBUTTON      "...",IDC_DFILE,7 + 136,     92, 16, 14
-    PUSHBUTTON      "New",IDC_DNEW,7 + 136 + 16, 92, 24, 14
-    PUSHBUTTON      "Eject", IDC_EJECTD, 7 + 136 + 16 + 24, 92, 24, 14
+    LTEXT           "D:",IDC_STATIC,7,76+16,27,10
+    RADIOBUTTON     "Hard drive", IDC_DHDD,   7, 92+16, 53, 12 , WS_TABSTOP
+    RADIOBUTTON     "CD-ROM",     IDC_DCDROM, 7+64, 92+16, 53, 12 , WS_TABSTOP
+    EDITTEXT        IDC_EDIT_D_FN, 7, 92+32, 136, 12, WS_DISABLED
+    PUSHBUTTON      "...",IDC_DFILE,7 + 136,     92+32, 16, 14
+    PUSHBUTTON      "New",IDC_DNEW,7 + 136 + 16, 92+32, 24, 14
+    PUSHBUTTON      "Eject", IDC_EJECTD, 7 + 136 + 16 + 24, 92+32, 24, 14
     
-    EDITTEXT        IDC_EDIT_D_SPT,36,108,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT_D_HPC,94,108,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT_D_CYL,152,108,28,12, WS_DISABLED
-    LTEXT           "Sectors:",IDC_STATIC,7,108,27,10
-    LTEXT           "Heads:",IDC_STATIC,63,108,29,8
-    LTEXT           "Cylinders:",IDC_STATIC,120,108,32,12
-    LTEXT           "", IDC_TEXT_D_SIZE, 7, 124, 136, 12    
+    EDITTEXT        IDC_EDIT_D_SPT,36,108+32,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_D_HPC,94,108+32,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_D_CYL,152,108+32,28,12, WS_DISABLED
+    LTEXT           "Sectors:",IDC_STATIC,7,108+32,27,10
+    LTEXT           "Heads:",IDC_STATIC,63,108+32,29,8
+    LTEXT           "Cylinders:",IDC_STATIC,120,108+32,32,12
+    LTEXT           "", IDC_TEXT_D_SIZE, 7, 124+32, 136, 12    
 
-    LTEXT           "E:",IDC_STATIC,7,146,27,10
-    EDITTEXT        IDC_EDIT_E_FN, 7, 162, 136, 12, WS_DISABLED
-    PUSHBUTTON      "...",IDC_EFILE,7 + 136,     162, 16, 14
-    PUSHBUTTON      "New",IDC_ENEW,7 + 136 + 16, 162, 24, 14
-    PUSHBUTTON      "Eject", IDC_EJECTE, 7 + 136 + 16 + 24, 162, 24, 14
+    LTEXT           "E:",IDC_STATIC,7,146+32,27,10
+    RADIOBUTTON     "Hard drive", IDC_EHDD,   7, 162+32, 53, 12 , WS_TABSTOP
+    RADIOBUTTON     "CD-ROM",     IDC_ECDROM, 7+64, 162+32, 53, 12 , WS_TABSTOP
+    EDITTEXT        IDC_EDIT_E_FN, 7, 162+48, 136, 12, WS_DISABLED
+    PUSHBUTTON      "...",IDC_EFILE,7 + 136,     162+48, 16, 14
+    PUSHBUTTON      "New",IDC_ENEW,7 + 136 + 16, 162+48, 24, 14
+    PUSHBUTTON      "Eject", IDC_EJECTE, 7 + 136 + 16 + 24, 162+48, 24, 14
     
-    EDITTEXT        IDC_EDIT_E_SPT,36,178,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT_E_HPC,94,178,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT_E_CYL,152,178,28,12, WS_DISABLED
-    LTEXT           "Sectors:",IDC_STATIC,7,178,27,10
-    LTEXT           "Heads:",IDC_STATIC,63,178,29,8
-    LTEXT           "Cylinders:",IDC_STATIC,120,178,32,12
-    LTEXT           "", IDC_TEXT_E_SIZE, 7, 194, 136, 12    
+    EDITTEXT        IDC_EDIT_E_SPT,36,178+48,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_E_HPC,94,178+48,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_E_CYL,152,178+48,28,12, WS_DISABLED
+    LTEXT           "Sectors:",IDC_STATIC,7,178+48,27,10
+    LTEXT           "Heads:",IDC_STATIC,63,178+48,29,8
+    LTEXT           "Cylinders:",IDC_STATIC,120,178+48,32,12
+    LTEXT           "", IDC_TEXT_E_SIZE, 7, 194+48, 136, 12    
 
-    LTEXT           "F:",IDC_STATIC,7,216,27,10
-    EDITTEXT        IDC_EDIT_F_FN, 7, 232, 136, 12, WS_DISABLED
-    PUSHBUTTON      "...",IDC_FFILE,7 + 136,     232, 16, 14
-    PUSHBUTTON      "New",IDC_FNEW,7 + 136 + 16, 232, 24, 14
-    PUSHBUTTON      "Eject", IDC_EJECTF, 7 + 136 + 16 + 24, 232, 24, 14
+    LTEXT           "F:",IDC_STATIC,7,216+48,27,10
+    RADIOBUTTON     "Hard drive", IDC_FHDD,   7, 232+48, 53, 12 , WS_TABSTOP
+    RADIOBUTTON     "CD-ROM",     IDC_FCDROM, 7+64, 232+48, 53, 12 , WS_TABSTOP
+    EDITTEXT        IDC_EDIT_F_FN, 7, 232+64, 136, 12, WS_DISABLED
+    PUSHBUTTON      "...",IDC_FFILE,7 + 136,     232+64, 16, 14
+    PUSHBUTTON      "New",IDC_FNEW,7 + 136 + 16, 232+64, 24, 14
+    PUSHBUTTON      "Eject", IDC_EJECTF, 7 + 136 + 16 + 24, 232+64, 24, 14
     
-    EDITTEXT        IDC_EDIT_F_SPT,36,248,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT_F_HPC,94,248,16,12, WS_DISABLED
-    EDITTEXT        IDC_EDIT_F_CYL,152,248,28,12, WS_DISABLED
-    LTEXT           "Sectors:",IDC_STATIC,7,248,27,10
-    LTEXT           "Heads:",IDC_STATIC,63,248,29,8
-    LTEXT           "Cylinders:",IDC_STATIC,120,248,32,12
-    LTEXT           "", IDC_TEXT_F_SIZE, 7, 264, 136, 12    
+    EDITTEXT        IDC_EDIT_F_SPT,36,248+64,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_F_HPC,94,248+64,16,12, WS_DISABLED
+    EDITTEXT        IDC_EDIT_F_CYL,152,248+64,28,12, WS_DISABLED
+    LTEXT           "Sectors:",IDC_STATIC,7,248+64,27,10
+    LTEXT           "Heads:",IDC_STATIC,63,248+64,29,8
+    LTEXT           "Cylinders:",IDC_STATIC,120,248+64,32,12
+    LTEXT           "", IDC_TEXT_F_SIZE, 7, 264+64, 136, 12    
     
 END
 
